traces/bug_724.txt
src/fflib/array_tlp.hpp:1245: error: DEAD_STORE
  The value written to &knr_ (type basicForEachType*) is never used.
Showing all 1 steps of the trace


src/fflib/array_tlp.hpp:1245:6: Write of unused value
1243.        Dcl_Type< Resize<KNM<K> > > ();
1244.        aType knrp = atype<KN<K> *>();
1245.        aType knr_ = atype<KN_<K> >();
             ^
1246.      //-  typedef KN<Z> ZN;
1247.         
